--- a/mod2_rmd1.Rmd
+++ b/mod2_rmd1.Rmd
@@ -118,4 +118,30 @@ knitr::kable(head(cars),
 
 ##insert and equation with laTec
 $$ Y= \beta_0 + \beta1x $$
+## Insert Images
 
+Here is an image inserted
+
+![sunstar](sunstar.png)
+
+
+Here is the R logo
+
+![r logo](https://www.r-project.org/logo/Rlogo.svg)
+
+
+## Insert an Animated GIF and Video
+
+![sunstar](sunstar.gif)
+
+![sunstar](sunstar.mp4)
+
+
+## Insert text with some footnotes
+
+Here is a footnote reference [^1] and another [^longnote]
+
+Here is an inline footnote ^[Inlines notes are easier to write, since you don't have to pick an identifier and move down to type the note.]
+
+[^1]: Here is the footnote.
+[^longnote]: Here's one with multiple blocks.
